# path-finder

./: .gitignore  .safety-project.ini  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/: README_TEMPLATE.md
backend/: .env.example  .flake8  .safety-policy.yml  Procfile  README.md  celerybeat-schedule.db  manage.py  pyproject.toml  render-build.sh  render.yaml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_user_usermodel.py  0003_usermodel_saved_items.py  0004_add_indexes.py  0005_usermodel_tags.py  0006_usermodel_finished_onboarding.py  0007_rename_tags_usermodel_goals_and_more.py  0008_rename_usermodel_userprofile.py  0009_fix.py  0009_remove_userprofile_email_userprofile_user.py  0010_remove_userprofile_email_alter_userprofile_user.py
backend/pathfinder_api/: asgi.py  celery.py  settings.py  urls.py  utils.py  vectordb.py  wsgi.py
backend/social/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/social/migrations/: 0001_initial.py  0002_userrating_comment.py  0003_alter_userrating_user.py  0004_alter_userrating_user.py  0005_alter_userrating_user.py  0006_userrating_created_at_userrating_image.py  0007_alter_userrating_created_at.py
backend/suggestions/: admin.py  models.py  reco_schema.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/suggestions/management/commands/: add_missing_tags.py  reco_schema.py  sync_sheet.py
backend/suggestions/migrations/: 0001_initial.py  0002_rename_image_url_suggestionmodel_image_and_more.py  0003_alter_suggestionmodel_url.py  0004_alter_suggestionmodel_description_and_more.py  0005_add_indexes.py  0006_suggestionscachemodel.py  0007_remove_suggestionscachemodel_external_id.py  0008_suggestionmodel_tags.py  0008_suggestionmodel_total_rating_score_and_more.py  0009_remove_suggestionmodel_total_rating_score_and_more.py  0009_rename_suggestions_ids_suggestionscachemodel_suggestions.py  0010_rename_suggestions_suggestionscachemodel_suggestion_ids.py  0011_suggestionmodel_tags.py  0012_remove_suggestionscachemodel_suggestion_ids_and_more.py  0013_suggestionmodel_score.py  0014_alter_suggestionmodel_score_and_more.py  0015_alter_suggestionmodel_score.py  0016_merge_20251108_1525.py  0017_merge_20251108_1841.py
docs/: GitHub_Action.md  How_To_Use.md  Theme_Connection.md
frontend/: .env.example  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  (+4 more)
scripts/: ci-local.sh
(+55 files in other folders)
